在 docker.yml 中添加 workflow_dispatch 事件以支持手动触发工作流

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,9 +1,10 @@
 name: Publish Docker Image
-on: 
+on:
   push:
     branches: [ master ]
     tags:
       - '**'
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.ref }}-${{ github.workflow }}
