更新 Dockerfile 和 docker.yml，调整构建上下文和文件路径；在 subexport.cpp 和 subparser.cpp 中移除 dialer-proxy 的日志记录

--- a/scripts/Dockerfile
+++ b/scripts/Dockerfile
@@ -3,6 +3,9 @@ LABEL maintainer="tindy.it@gmail.com"
 ARG THREADS="4"
 ARG SHA=""
 
+# Copy local source code
+COPY . /subconverter/
+
 # build minimized
 WORKDIR /
 RUN set -xe && \
@@ -37,7 +40,6 @@ RUN set -xe && \
     cmake -DCMAKE_CXX_STANDARD=11 . && \
     make install -j $THREADS && \
     cd .. && \
-    git clone https://github.com/asdlokj1qpi233/subconverter --depth=1 && \
     cd subconverter && \
     [ -n "$SHA" ] && sed -i 's/\(v[0-9]\.[0-9]\.[0-9]\)/\1-'"$SHA"'/' src/version.h;\
     python3 -m ensurepip && \
